Update GitHub Action to run DRP ingestion daily at 4am UTC

--- a/.github/workflows/ingest_drp.yml
+++ b/.github/workflows/ingest_drp.yml
@@ -2,7 +2,7 @@ name: Ingest DRP Events
 
 on:
   schedule:
-    - cron: '0 4 * * 1'  # Every Monday at 4am UTC
+    - cron: '0 4 * * *'  # Daily at 4am UTC
   workflow_dispatch:     # Allow manual trigger from GitHub UI
 
 jobs:
