--- a/.github/workflows/ingest_drp.yml
+++ b/.github/workflows/ingest_drp.yml
@@ -29,3 +29,13 @@ jobs:
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
           python ingest/ingest_all_drp_events.py
+
+      - name: Notify Slack
+        if: always()
+        run: |
+          STATUS="${{ job.status }}"
+          curl -X POST -H 'Content-type: application/json' \
+            --data "{\"text\":\"🧠 *DRP Ingestion* completed with status: *${STATUS}*\"}" \
+            $SLACK_WEBHOOK_URL
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
