🔐 Add Supabase secrets to workflow environment

--- a/.github/workflows/daily_ingest.yml
+++ b/.github/workflows/daily_ingest.yml
@@ -9,7 +9,12 @@ jobs:
   run-ingestion:
     runs-on: ubuntu-latest
 
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+
     steps:
+
       - name: 📅 Checkout repo
         uses: actions/checkout@v3
 
