--- a/.github/workflows/populate_advisor_advs.yml
+++ b/.github/workflows/populate_advisor_advs.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: python -m pip install --upgrade pip && python -m pip install -r requirements.txt
 
       - name: Run advisor ADV population script
         run: python ingest/populate_advisor_advs.py
