--- a/.github/workflows/populate_advisor_advs.yml
+++ b/.github/workflows/populate_advisor_advs.yml
@@ -3,7 +3,7 @@ name: Populate Advisor ADVs
 on:
   schedule:
     - cron: '0 3 * * 0'  # Every Sunday at 3 AM UTC
-  workflow_dispatch:     # Allow manual trigger from GitHub UI
+  workflow_dispatch:
 
 jobs:
   run-script:
@@ -26,7 +26,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install tqdm  # Force install tqdm to guarantee it's there
+          pip install tqdm
 
       - name: Run advisor ADV population script
         run: python ingest/populate_advisor_advs.py
+
+      - name: Notify Slack on success
+        if: success()
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data '{"text":"✅ ADV population job succeeded!"}' \
+          ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Notify Slack on failure
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data '{"text":"❌ ADV population job failed!"}' \
+          ${{ secrets.SLACK_WEBHOOK_URL }}
