--- a/.github/workflows/populate_advisor_advs.yml
+++ b/.github/workflows/populate_advisor_advs.yml
@@ -1,9 +1,9 @@
 name: Populate Advisor ADVs
 
 on:
+  workflow_dispatch:    # Manual trigger
   schedule:
-    - cron: '0 3 * * 0'  # Every Sunday at 3 AM UTC
-  workflow_dispatch:
+    - cron: '0 4 * * 0'  # Every Sunday at 4 AM UTC
 
 jobs:
   run-script:
@@ -12,6 +12,10 @@ jobs:
     env:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: us-east-2
+      S3_BUCKET_NAME: trustgap-adv-pdfs
 
     steps:
       - name: Checkout repo
@@ -26,21 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install tqdm
+          pip install boto3 python-dotenv tqdm requests supabase
 
-      - name: Run advisor ADV population script
+      - name: Run ADV sync script
         run: python ingest/populate_advisor_advs.py
-
-      - name: Notify Slack on success
-        if: success()
-        run: |
-          curl -X POST -H 'Content-type: application/json' \
-          --data '{"text":"✅ ADV population job succeeded!"}' \
-          ${{ secrets.SLACK_WEBHOOK_URL }}
-
-      - name: Notify Slack on failure
-        if: failure()
-        run: |
-          curl -X POST -H 'Content-type: application/json' \
-          --data '{"text":"❌ ADV population job failed!"}' \
-          ${{ secrets.SLACK_WEBHOOK_URL }}
