Add Slack alert to DRP scoring workflow

--- a/.github/workflows/run_drp_scoring.yml
+++ b/.github/workflows/run_drp_scoring.yml
@@ -28,3 +28,13 @@ jobs:
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
           python scoring/drp_severity_scoring.py
+
+      - name: 📢 Notify Slack
+        if: always()
+        run: |
+          STATUS="${{ job.status }}"
+          curl -X POST -H 'Content-type: application/json' \
+            --data "{\"text\":\"📊 *DRP Scoring* completed with status: *${STATUS}*\"}" \
+            $SLACK_WEBHOOK_URL
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
